# llama-projects

./: .gitignore  .gitmodules  CLAUDE.md  PROJECT_STATUS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: e2e-tests.yml
.planning/: PROJECT.md  REQUIREMENTS.md  jira-analysis-design.md
.planning/codebase/: ARCHITECTURE.md  STRUCTURE.md
chat/: CLAUDE.md  DATASOURCE_INTEGRATION.md  E2E_TEST_REPORT.md  config.yaml  pyproject.toml
chat/src/: .env.example  datasource_config.py  generate.py  index.py  llmwiki_integration.py  query.py  settings.py  workflow.py
chat/tests/: test_datasource_integration.py
chat/ui/: KNOWN_ISSUES.md  index.ts  package-lock.json  package.json  playwright.config.ts
data-explore/: pyproject.toml
datasource/: .env.example  .gitignore  ISSUES.md  PHASE1_REVIEW.md  PHASE2_REVIEW.md  PHASE3_REVIEW.md  PHASE3_SUMMARY.md  PHASE4_REVIEW.md  PHASE4_SUMMARY.md  PHASE5_REVIEW.md  PHASE5_SUMMARY.md  PHASE6_PLAN.md  PHASE6_REVIEW.md  PHASE6_TASK1_SUMMARY.md  PHASE7_PLAN.md  PLAN.md  PROGRESS.md  PROJECT_INIT_SUMMARY.md  PROJECT_SNAPSHOT.md  PROJECT_SUMMARY.md  README.md  REVIEW_TEMPLATE.md  cli.py  pyproject.toml  requirements.txt
datasource/benchmarks/: async_performance.py
datasource/core/: manager.py  models.py
datasource/core/indexing/: bm25.py
datasource/core/sources/: __init__.py  base.py  confluence.py  jira.py  local.py
datasource/core/utils/: __init__.py  html_cleaner.py  pagination.py
datasource/datasource/: __init__.py  cli.py
datasource/datasource/core/: __init__.py  manager.py  paths.py
datasource/datasource/core/indexing/: __init__.py  hybrid.py  vector.py
datasource/datasource/core/sources/: __init__.py  base.py  confluence.py  jira.py  local.py  mineru_reader.py  pdf_reader.py
datasource/datasource/core/utils/: async_http.py  retry.py
datasource/test_data/: test.md
datasource/tests/: __init__.py  conftest.py  test_confluence_async.py  test_confluence_source.py  test_html_cleaner.py  test_incremental_sync.py  test_indexing.py  test_jira_async.py  test_jira_source.py  test_local_source.py  test_manager.py  test_models.py  test_pagination.py  test_paths.py  test_retrieval.py
datasource/tests/integration/: test_local_workflow.py  test_sync_query_workflow.py
deep-serach/: pyproject.toml
docs/: JIRA_CONFLUENCE_集成指南.md
docs/design/: 05-workflows.md
jira-analysis/: .env.example  .gitignore  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  IMPLEMENTATION.md  LOCAL_TEST.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5.1_COMPLETE.md  PHASE5.2_COMPLETE.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  USAGE.md  config.example.yaml  config.yaml  config.yaml.example  llama_deploy.yml  pyproject.toml  simple-ui.html  test_connection.py  test_real_data.py
jira-analysis/docs/: E2E_IMPLEMENTATION_SUMMARY.md  E2E_TESTING.md  PHASE_1_COMPLETION.md  PHASE_2_ROADMAP.md  UI_COMPLETE.md  UI_IMPLEMENTATION_SUMMARY.md
jira-analysis/scripts/: run-complete-e2e-tests.bat  run-complete-e2e-tests.sh  run-e2e-tests.bat  run-e2e-tests.sh
jira-analysis/src/: __init__.py  api_server.py  cli.py  exceptions.py  generate.py  init.py  settings.py
jira-analysis/src/core/: issue_loader.py  llm_client.py  prompt_builder.py  retriever.py  router.py
jira-analysis/src/profiles/: config.json
jira-analysis/src/profiles/prompts/: change_impact.txt  general.txt  rca.txt  traceability.txt
jira-analysis/src/utils/: error_handling.py  logging.py  query_builder.py
jira-analysis/src/workflow_modules/: batch_analysis.py  deep_analysis.py
jira-analysis/src/workflows/: batch_analysis.py  deep_analysis.py
jira-analysis/tests/: local_test.py  test_batch_analysis_workflow.py  test_deep_analysis_workflow.py  test_issue_loader.py  test_prompt_builder.py  test_router.py
jira-analysis/tests/e2e/: README.md  __init__.py  conftest.py  pytest.ini  test_accessibility.py  test_api.py  test_complete_workflow.py  test_cross_browser.py  test_performance.py  test_ui_batch_analysis.py  test_ui_deep_analysis.py  test_workflow_integration.py
jira-analysis/tests/fixtures/: mock_issue_bug.json  mock_issue_story.json
jira-analysis/ui/: BATCH_ANALYSIS.md  IMPLEMENTATION.md  README.md  TESTING_STATUS.md  VISUAL_GUIDE.md  index.ts  package-lock.json  package.json  playwright.config.ts  simple-ui.html  tsconfig.json
jira-analysis/ui-next/: package-lock.json  package.json
jira-analysis/ui-next/components/ui/: select.tsx
jira-analysis/ui/app/: README.md  package-lock.json  package.json
jira-analysis/ui/app/app/: globals.css  layout.tsx  page.tsx
jira-analysis/ui/app/app/knowledge/: page.tsx
jira-analysis/ui/app/app/reports/: page.tsx
jira-analysis/ui/app/components/: AnalysisProgress.tsx  AnalysisResults.tsx  BatchConfigPanel.tsx  BatchProgress.tsx  BatchReport.tsx  Card.tsx  ExportOptions.tsx  Header.tsx  MarkdownRenderer.tsx
jira-analysis/ui/app/e2e/: README.md  TEST_COVERAGE.md  components.spec.ts  integration.spec.ts
jira-analysis/ui/app/hooks/: useSSEStream.ts
jira-analysis/ui/app/lib/: utils.ts
jira-analysis/ui/app/types/: events.ts
jira-analysis/ui/components/: AnalysisResult.tsx  BatchProgressEvent.tsx  EvidenceEvent.tsx  Messages.tsx  ProgressEvent.tsx  SkeletonLoader.tsx  ThemeToggle.tsx  styles.css
jira-analysis/ui/layout/: header.tsx
llmwiki/: .env.example  CLI_TEST_REPORT.md  DEEP_RETRIEVAL.md  DESIGN.md  QUICKSTART.md  README.md  STATUS.md  SUMMARY.md  __init__.py  __main__.py  cli.py  cli_utils.py  config.py  config.yaml  retrieval.py  sync.py  test_imports.py  test_retrieval.py
llmwiki/converters/: __init__.py  base.py  confluence.py  jira.py
requirement-tracing/: PLAN.md  README.md
scripts/: sync_all.sh
shared/: INTEGRATION.md  INTEGRATION_LLAMAINDEX.md  LLAMAINDEX_READERS.md  README.md  REFACTOR.md  REFACTOR_COMPLETE.md  STRUCTURE.py  SUMMARY.md  __init__.py  config.py  config_llamaindex.py  example_llamaindex.py  example_usage.py  quick_start.py  quick_start_llamaindex.py  requirements.txt  requirements_llamaindex.txt  test.py
(+40 files in other folders)
