[project]
name = "llama-projects"
version = "0.1.0"
description = "LlamaIndex multi-project workspace"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core dependencies
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.11.5",
    "aiostream>=0.5.2,<0.6.0",

    # LlamaIndex core
    "llama-index-core>=0.13.0,<0.14.0",
    "llama-index-readers-file>=0.4.6,<1.0.0",
    "llama-index-indices-managed-llama-cloud>=0.6.3,<1.0.0",
    "llama-index-llms-openai>=0.4.0,<0.6.0",
    "llama-index-embeddings-openai>=0.4.0",
    "llama-index-retrievers-bm25>=0.2.0",
    "llama-index-readers-confluence",
    "llama-index-readers-jira",

    # LlamaDeploy
    "llama-deploy",

    # Document processing
    "docx2txt>=0.8,<0.9",
    "pypdf>=3.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "openpyxl>=3.1.0",
    "mineru>=2.7.6",

    # Text processing
    "PyStemmer>=2.2.0",
    "beautifulsoup4>=4.12.0",

    # HTTP clients
    "requests>=2.31.0",
    "aiohttp>=3.9.0",

    # External APIs
    "jira>=3.5.0",
    "atlassian-python-api>=3.41.0",

    # CLI
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.0",

    # data-explore specific
    "e2b-code-interpreter>=1.1.1,<2.0.0",
    "markdown>=3.7,<4.0",
    "xhtml2pdf>=0.2.17,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-asyncio>=0.25.3,<0.26.0",
    "mypy>=1.8.0,<2.0.0",
]

[project.scripts]
# datasource CLI
datasource = "datasource.cli:cli"
# chat app
chat-generate = "chat.src.generate:generate_index"
# data-explore app
data-explore-generate = "data_explore.src.generate:generate_index"
# deep-search app
deep-search-generate = "deep_serach.src.generate:generate_index"

[tool.uv.sources]
llama-deploy = { git = "https://github.com/run-llama/llama_deploy" }

[tool.mypy]
python_version = "3.12"
plugins = "pydantic.mypy"
exclude = ["tests", "venv", ".venv", "output", "config"]
check_untyped_defs = true
warn_unused_ignores = false
show_error_codes = true
namespace_packages = true
ignore_missing_imports = true
follow_imports = "silent"
implicit_optional = true
strict_optional = false
disable_error_code = ["return-value", "assignment"]

[[tool.mypy.overrides]]
module = ["datasource.*", "chat.*", "data_explore.*", "deep_serach.*"]
ignore_missing_imports = false

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.3",
    "pytest-playwright>=0.7.2",
    "pytest-timeout>=2.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["datasource", "chat", "data-explore", "deep-serach"]
