[project]
name = "datasource"
version = "0.1.0"
description = "Multi-source data management system for LlamaIndex RAG applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.10.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "llama-index-retrievers-bm25>=0.2.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "openpyxl>=3.1.0",
    "PyStemmer>=2.2.0",
    "jira>=3.5.0",
    "atlassian-python-api>=3.41.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "black>=23.12.0",
]

[project.scripts]
datasource = "datasource.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "cli.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
