[project]
name = "jira-analysis"
version = "0.1.0"
description = "Jira issue deep analysis system based on LlamaIndex Workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai-like>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.14.3",
    "llama-index-embeddings-openai>=0.6.0",
]

[tool.uv.sources]
jira-datasource = { path = "../datasource", editable = true }

[project.scripts]
jira-analysis = "src.cli:cli"
jira-index = "src.generate:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
e2e = [
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "aiohttp>=3.9.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
